# fashion_platform

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.js
.github/workflows/: ci.yml
.tmp/: style_backup.css
SQL文件/: cart_items.sql  clothing_items.sql  outfits.sql  permissions.sql  products.sql  role_permissions.sql  roles.sql  user_clothes.sql  user_profiles.sql  user_roles.sql  users.sql  wardrobe.sql
app/: __init__.py  celery_app.py  extensions.py  models.py  package.json
app/analytics/: views.py
app/auth/: forms.py  routes.py
app/fashion_advisor/: agent.py  knowledge_base.py  langchain_retriever.py  llm_client.py  prompts.py  services.py  views.py
app/main/: __init__.py  views.py
app/recommendation/: __init__.py  analyzer.py  reasoning.py  views.py  weather.py
app/search/: __init__.py  image_features.pkl  image_search.py  train_image_search.py  views.py
app/services/: ai_service.py  image_utils.py  llm_observability.py  vector_store.py  weather_service.py
app/wardrobe/: __init__.py  views.py
config/: default.py
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  FAQ.md  SCREENSHOTS.md  openapi.yml
static/: fashion_advisor.html
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/account/: change_password.html  (+3 more)
tests/: test_analytics.py  test_fashion_advisor_agent.py  test_fashion_advisor_infra.py  test_feature_flags.py  test_image_utils.py  test_recommendation.py  test_search_wardrobe_api.py
(+18 files in other folders)
